# PlateCurie

./: .buildinfo  .gitignore  README.md  api.html  classes.html  estimate.html  genindex.html  index.html  links.html  meson.build  plotting.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: deploy.yml
Examples/Notebooks/: Ex1_making_grids.ipynb
Examples/__MACOSX/data/: ._Freeair_NA.xyz  ._Topo_NA.xyz
docs/: .buildinfo  api.html  api.rst  classes.html  classes.rst  conf.html  conf.py  estimate.html  estimate.rst  genindex.html  index.html  links.html  objects.inv  plotting.html  py-modindex.html  search.html  searchindex.js
docs/_build/doctrees/: api.doctree  classes.doctree  environment.pickle  estimate.doctree  index.doctree  links.doctree  plotting.doctree
docs/_build/html/: links.html  plotting.html  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  plotting.rst.txt
docs/_sources/: api.rst.txt  classes.rst.txt  conf.rst.txt  index.rst.txt  links.rst.txt
platecurie/: __init__.py  classes.py  conf.py  doc.py  estimate.py  plotting.py
platecurie/examples/Notebooks/: Ex1_making_grids.ipynb  Ex2_wavelet_analysis.ipynb  Ex3_estimate_curie_parameters_cell.ipynb  Ex4_estimate_curie_parameters_grid.ipynb  Ex5_estimate_curie_variable_zt.ipynb
platecurie/examples/picture/: anomaly.eps  latex_math.tex
